# llm-benchmark

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  run_migration.py  setup.py
backend/: README.md  __init__.py  main.py
data/models/: config.json
datasets/: __init__.py
docs/: README.md  architecture.md  prd.md
llm_bench_local/: __init__.py
llm_bench_local/api/: __init__.py  main.py  routes.py
llm_bench_local/api/routers/: benchmarks.py  datasets.py  hardware.py  models.py  rag.py
llm_bench_local/config/: __init__.py  settings.py
llm_bench_local/core/: __init__.py  benchmark.py  model.py
llm_bench_local/datasets/: __init__.py  manager.py
llm_bench_local/hardware/: __init__.py  monitor.py
llm_bench_local/llm/: runner.py
llm_bench_local/persistence/: __init__.py  crud.py  database.py  migrations.py
llm_bench_local/rag/: __init__.py  pipeline.py
llm_bench_local/schemas/: benchmark.py
llm_bench_local/scripts/: __init__.py
scripts/: run_benchmark_cli.py
tests/: conftest.py
tests/integration/: test_api.py  test_backend.py
tests/unit/: test_benchmark.py  test_model.py  test_persistence.py
torch/: __init__.py
transformers/: __init__.py
